--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ defaults:
     scope:
       path: "" # 一个空的字符串代表项目中所有的文件
     values:
-      layout: "default"
+      layout: "page"
 
 kramdown:
   input: GFM
